--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 spring.application.name=bookreview
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookreviewdb
 spring.datasource.username=postgres
